# Workflow-Management-System

./: CMakeLists.txt  Cross Test Report.docx  Final.docx  Presentation.pptx  README.md  readme.txt
Code/: Administrator.cpp  Administrator.h  Captcha.cpp  Captcha.h  Database.cpp  Database.h  Director.cpp  Director.h  Employee.cpp  Employee.h  Faculty.cpp  Faculty.h  File.cpp  File.h  Finance.cpp  Finance.h  Hod.cpp  Hod.h  Leave.cpp  Leave.h  Research_scholar.cpp  Research_scholar.h  Student.cpp  Student.h  Supplementary.cpp  Supplementary.h  Undergrads.cpp  Undergrads.h  User.cpp  User.h  Utility_class.cpp  Utility_class.h  main.cpp
data/: f.txt  g.txt
